Bolsa de empleo

--- a/src/app/medialab/components/footer/footer.component.html
+++ b/src/app/medialab/components/footer/footer.component.html
@@ -37,8 +37,8 @@
           <ul class="text-content-2 space-y-1 md:space-y-4">
             <li>Campus - San Cayetano Alto.</li>
             <li>Loja - Ecuador</li>
-            <li><address class="not-italic">PARIS SYN PRAGA edif. Nro. 2 Segunda planta.</address></li>
-            <li><p> Teléfono:  3701444 - Ext.2498</p></li>
+            <li><address class="not-italic">Paris SN Praga edif. 9 Tercer piso</address></li>
+            <li><p> Teléfono: 3701444 Ext. 2271</p></li>
             <li class="flex space-x-1">
                <p>Correo electrónico:</p> <p class="hover:underline">{{' medialab@utpl.edu.ec'}}</p>
             </li>
