--- a/src/app/medialab/pages/about-us-page/about-us-page.component.html
+++ b/src/app/medialab/pages/about-us-page/about-us-page.component.html
@@ -10,9 +10,10 @@
         <!-- <P>HISTORIA</P> -->
       </h2>
 
-      <p class="text-center my-5">Historia de Radio UTPL: Un espacio de innovación y compromiso educativo</p>
-      <p class="text-justify my-5">La Universidad Técnica Particular de Loja (UTPL) ha destacado por su innovación y compromiso con la educación y la comunicación. Radio UTPL, creada como un laboratorio para estudiantes de Comunicación, ha evolucionado en un canal de comunicación universitario que genera contenidos informativos, pedagógicos y experimentales. Este espacio fomenta la creatividad y el aprendizaje práctico, permitiendo que estudiantes, docentes y administrativos propongan y exploren diversas formas de comunicación gracias a tecnologías avanzadas.</p>
-      <p class="text-justify my-5">Actualmente, Radio UTPL es un medio consolidado que no solo enriquece el entorno universitario, sino que también beneficia a la comunidad local mediante la difusión de contenidos relevantes y de alta calidad. Su impacto perdurable refleja el compromiso de la UTPL con la innovación, contribuyendo significativamente al desarrollo cultural y educativo.</p>
+      <p class="text-center my-5">Laboratorio de comunicación, innovación y cultura digital de la UTPL</p>
+      <p class="text-justify my-5">Los laboratorios de innovación, experimentación y co-creación, surgen en los entornos universitarios como espacios de enseñanza-aprendizaje, en los que hacen sinergia las herramientas tecnológicas y las iniciativa docente-estudiantiles, relacionadas con la puesta en marcha de proyectos y programas con un tinte social, actual y vinculado a tono con las demandas de la llamada “Sociedad Digital”.</p>
+      <p class="text-justify my-5">En este marco, el MediaLab UTPL es un laboratorio centrado en la experimentación con tecnologías y medios de comunicación, que pretende además para este nuevo periodo de gestión, empatar sus propuestas con la mediación cultural y ciudadana; y, la innovación social, como una llamado latente, que nutre además a los campos de formación de los estudiantes que se vinculan a sus diferentes líneas de trabajo.</p>
+      <p class="text-justify my-5">El resultado de este trabajo debe verificarse en demostrar la pluralidad de actores vinculados directa o indirectamente, así como la necesidad de establecer a posteriori y fruto de la ejecución de las iniciativas, indicadores que concilien tanto intereses académicos como sociales.</p>
     </div>
 
     <div class="col-span-1 select-none my-20">
