--- a/src/app/medialab/pages/layout-page/layout-page.component.html
+++ b/src/app/medialab/pages/layout-page/layout-page.component.html
@@ -13,11 +13,6 @@
       alt=""
     >
 
-    <!-- Estacion de Medialab -->
-    <div class="absolute w-[300px] m-5" *ngIf="!this.router.url.includes('admin')">
-      <medialab-element-medialab></medialab-element-medialab>
-    </div>
-
     <div
       class="absolute w-full text-4xl text-white text-title-1"
       [ngClass]="{'text-center bottom-20 h-auto':!this.router.url.includes('admin'),
@@ -59,7 +54,7 @@
         <path d="M31.8507 17.5963C31.8507 18.3915 31.206 19.0363 30.4107 19.0363C29.6154 19.0363 28.9707 18.3915 28.9707 17.5963C28.9707 16.801 29.6154 16.1562 30.4107 16.1562C31.206 16.1562 31.8507 16.801 31.8507 17.5963Z" fill="white"/>
       </svg>
     </a>
-    <a href="https://open.spotify.com/show/7DTkJfXqfEEpbEWCRizDua?si=-u2DlMXGR-GnHyZM1R37dA&nd=1&dlsi=ecd8f29103714765" target="_blank" title="Spotify">
+    <!-- <a href="https://open.spotify.com/show/7DTkJfXqfEEpbEWCRizDua?si=-u2DlMXGR-GnHyZM1R37dA&nd=1&dlsi=ecd8f29103714765" target="_blank" title="Spotify">
       <svg width="30px" height="30px" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
         <circle cx="24" cy="24" r="20" fill="#D5D5D5" class="hover:fill-yellow-500"/>
         <path
@@ -69,7 +64,7 @@
         d="M33.241 31.065C32.625 31.841 31.476 32.017 30.701 31.398C27.121 28.687 20.762 27.938 15.971 29.52C15.063 29.821 14.097 29.347 13.796 28.44C13.495 27.533 13.97 26.567 14.877 26.265C20.588 24.451 27.645 25.288 31.93 28.566C32.705 29.185 32.857 30.288 33.241 31.065ZM35.648 25.983C34.858 26.923 33.467 27.109 32.527 26.32C28.627 23.3 19.586 22.964 14.789 24.855C13.802 25.231 12.696 24.757 12.32 23.77C11.944 22.782 12.418 21.676 13.406 21.301C18.971 19.128 29.067 19.493 33.899 23.058C34.839 23.847 35.005 25.043 35.648 25.983ZM35.478 20.514C31.156 17.276 16.604 17.324 11.749 19.432C10.769 19.847 9.646 19.366 9.23 18.385C8.815 17.405 9.296 16.282 10.276 15.867C15.835 13.516 31.24 13.441 36.93 17.171C37.864 17.802 38.074 19.026 37.443 19.96C36.812 20.894 35.588 21.103 35.478 20.514Z"
       />
       </svg>
-    </a>
+    </a> -->
   </div>
 
 </div>
