--- a/src/app/medialab/components/section-about-us/section-about-us.component.html
+++ b/src/app/medialab/components/section-about-us/section-about-us.component.html
@@ -25,12 +25,12 @@
   <div class="w-full text-sm   text-wrap text-blue-utpl" >
     <h1 class="right-0 text-2xl">
       <p><strong>{{'Acerca de' | uppercase}}</strong> </p>
-      <p>{{'Radio UTPL' | uppercase}}</p>
+      <p>{{'MediaLab' | uppercase}}</p>
     </h1>
 
-    <p class="text-justify my-5">Radio UTPL es un canal de comunicación universitario que tiene como misión principal la creación y difusión de contenidos sonoros de calidad, con un enfoque informativo, pedagógico y experimental. Este espacio se ha consolidado como una plataforma innovadora donde convergen estudiantes, administrativos, docentes e investigadores para proponer, desarrollar y explorar diversas formas de comunicación a través de la radio digital.</p>
-      <p class="text-justify my-5">Nuestra visión es ser un medio creativo que fomente el aprendizaje práctico y el pensamiento crítico, utilizando las últimas herramientas y tecnologías disponibles. Radio UTPL se destaca por brindar un espacio dinámico y colaborativo que impulsa el desarrollo de habilidades comunicativas, la experimentación con formatos sonoros, y la reflexión sobre los medios de comunicación contemporáneos.
-    </p>
+    <p class="text-justify my-5">El MediaLab UTPL es un espacio ciudadano de producción, destinado a la investigación, generación y difusión de proyectos multidisciplinarios, donde investigadores, estudiantes, docentes y público en general puedan proponer, crear, y explorar las distintas formas de experimentación y aprendizaje colaborativo, haciendo uso de las herramientas y tecnología con las que se cuenta.</p>
+    <p class="text-justify my-5">La academia como actor generador y potenciador de conocimiento, es la llamada a crear este tipo de proyectos que permitan su vinculación con la sociedad. En este contexto desde el Departamento Ciencias de la Comunicación propone la creación del MediaLab UTPL, que permitirá vincular la cultura digital con los diferentes ámbitos académicos para generar proyectos, debates, talleres, etc, dentro de un marco de bien común y mejora de la sociedad.</p>
+    <p class="text-justify my-5">Físicamente está ubicado en el Campus de la UTPL en la ciudad de Loja, y se pretende tener una marcada presencia digital a través de su página web y las distintas redes sociales.</p>
 
     <div class="px-5 py-2">
       <a routerLink="../quienes-somos" class="px-5 py-2 bg-yellow-utpl font-semibold text-xs text-blue-utpl  rounded-3xl border-blue-utpl border-2 shadow-md hover:bg-blue-utpl hover:text-white">
