--- a/src/app/medialab/pages/contact-page/contact-page.component.html
+++ b/src/app/medialab/pages/contact-page/contact-page.component.html
@@ -10,8 +10,8 @@
             <path fill-rule="evenodd" clip-rule="evenodd" d="M20.9997 0.833008C32.2755 0.833008 41.4163 9.97386 41.4163 21.2497C41.4163 24.659 40.5831 27.8714 39.1036 30.698L20.9997 62.083L3.31508 31.4592C1.57467 28.4538 0.583008 24.9689 0.583008 21.2497C0.583008 9.97386 9.72386 0.833008 20.9997 0.833008ZM20.9997 6.66634C12.9455 6.66634 6.41634 13.1955 6.41634 21.2497C6.41634 23.5657 6.95062 25.7879 7.96168 27.794L8.45166 28.6889L20.9997 50.4163L33.6363 28.5359C34.9068 26.3419 35.583 23.8552 35.583 21.2497C35.583 13.1955 29.0538 6.66634 20.9997 6.66634ZM20.9997 12.4997C25.8322 12.4997 29.7497 16.4172 29.7497 21.2497C29.7497 26.0822 25.8322 29.9997 20.9997 29.9997C16.1672 29.9997 12.2497 26.0822 12.2497 21.2497C12.2497 16.4172 16.1672 12.4997 20.9997 12.4997ZM20.9997 18.333C19.3888 18.333 18.083 19.6388 18.083 21.2497C18.083 22.8605 19.3888 24.1663 20.9997 24.1663C22.6105 24.1663 23.9163 22.8605 23.9163 21.2497C23.9163 19.6388 22.6105 18.333 20.9997 18.333Z" fill="white"/>
           </svg>
           <div>
-            <p class="text-title-2 text-white font-bold">Edificio 2, Planta 2</p>
-            <p class="text-content-2 text-blue-utpl">Campus San Cayetano Alto<br>Loja - Ecuador<br>C/ Marcelino Champagnay, S/N.</p>
+            <p class="text-title-2 text-white font-bold">Edificio 9. Tercer piso</p>
+            <p class="text-content-2 text-blue-utpl">Campus San Cayetano Alto<br>Loja - Ecuador<br>Paris SN Praga</p>
           </div>
         </div>
 
@@ -53,7 +53,7 @@
         <div class="shadow-md text-lg rounded-3xl bg-gradient-to-b from-[#216A9C] to-[#06446F]">
 
           <div class="w-[60%] mx-auto my-5 flex-col text-center text-white">
-            <p class="">Contáctanos o escríbenos tus dudas o sugerencias</p>
+            <p class="">Contáctanos o escríbenos tus sugerencias</p>
             <div class="flex my-3 justify-center">
               <span class="block w-[40%] h-[1px] bg-yellow-utpl"></span>
             </div>
@@ -82,7 +82,7 @@
         <div class="w-full h-[300px] lg:h-full flex items-center">
           <iframe
               class="rounded-lg border-2 border-black"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d995.0410761335067!2d-79.19965117360255!3d-3.9866001832293607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91cb473d6f1238fb%3A0xd5086b01874dd47e!2sEdificio%202%3A%20Bloque%20de%20aulas%20-%20UTPL!5e0!3m2!1ses!2sec!4v1727801418077!5m2!1ses!2sec"
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d995.0415173755904!2d-79.1976549!3d-3.9862356!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91cb47e2e663a91d%3A0x90891b393471009c!2sC.%20Par%C3%ADs%20450%2C%20Loja!5e0!3m2!1ses-419!2sec!4v1753435268868!5m2!1ses-419!2sec"
               width="100%"
               height="80%"
               allowfullscreen="true"
